# drawbot

./: .editorconfig  .gitattributes  .gitignore  .tokeignore  AUTHORS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  bot.py  classement.json  config.json  config.json.example  flake.nix  logs.txt  pronote.json.example  requirements.txt  run.py  setup.cfg  tokei.toml
.github/: pull_request_template.md
app/: __init__.py  bot.py  config.json.example  pronote.json.example  utils.py
app/cogs/: informations.py  pronote.py
app/utils/: __init__.py  json_files.py  pronote.py
docs/: CONTRIBUTING.md  README.md
drawbot/: .gitignore  __init__.py  __main__.py  bot.py  json_types.py
drawbot/cogs/: __init__.py  information.py  informations.py  pronote.py  pronote_commands.py  pronote_loop.py
drawbot/utils/: __init__.py  json_files.py  pronote.py
users/: 223141992375255041.json  352125871617736704.json  364440485860868116.json
vars/: .gitignore  config.json.example
