[metadata]
name = drawbot
version = 2.0.0
author = Drawbu
description = A Pronote notifier discord bot.
long_description = file: docs/README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = unix, linux, osx, cygwin, windows
project_urls =
    Github repository=https://github.com/drawbu/drawbot
    Discord=https://discord.gg/XGXydQyKhQ
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    drawbot
    drawbot.cogs
    drawbot.utils
install_requires =
    discord.py==2.0.1
    pronotepy==2.4.0
    colorama==0.4.5
python_requires = > 3.8
zip_safe = no


[options.extras_require]
dev =
    black~=22.6.0
